--- a/Services/DockerComposeGenerator/DockerComposeGenerator.csproj
+++ b/Services/DockerComposeGenerator/DockerComposeGenerator.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="YamlDotNet" Version="13.7.1" />
   </ItemGroup>
 
